# realnumb

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-tidy-review.yml  cmake-multi-platform.yml  codeql.yml
unittest/: CMakeLists.txt  fixed.cpp  fixed_limits.cpp  fixed_math.cpp
